--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="col-md-6">
 
     <div class="todo-box shadow">
-      <h2 class="text-center mb-3">✅ Task Manager</h2>
+      <h2 class="text-center mb-3">Task Manager</h2>
       <p id="stats" class="text-center text-muted mb-4">0 / 0 completed</p>
 
       <!-- input -->
